--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "client": "npm start --prefix client",
     "server": "npm run watch --prefix server",
     "watch": "concurrently \"npm run server\" \"npm run client\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "concurrently \"npm run test --prefix server\" \"npm run test --prefix client\""
   },
   "keywords": [],
   "author": "",
